# coding-playground

./: README.md
Dolphin Save Switchers/: save_state_shuffler.py  tab_switcher.py
EPIC THE MUSICAL/: Test Analysis.py
EPIC THE MUSICAL/Songs/: 1.1 The Horse and the Infant.txt  1.2 Just a Man.txt  1.3 Full Speed Ahead.txt  1.4 Open Arms.txt  1.5 Warrior of the Mind.txt  2.1 Polyphemus.txt  2.2 Survive.txt  2.3 Remember Them.txt  2.4 My Goodbye.txt  3.1 Storm.txt  3.2 Luck Runs Out.txt  3.3 Keep Your Friends Close.txt  3.4 Ruthlessness.txt  4.1 Puppeteer.txt  4.2 Wouldn't You Like.txt  4.3 Done For.txt  4.4 There Are Other Ways.txt  5.1 The Underworld.txt  5.2 No Longer You.txt  5.3 Monster.txt  6.1 Suffering.txt  6.2 Different Beast.txt  6.3 Scylla.txt  6.4 Mutiny.txt  6.5 Thunder Bringer.txt  7.1 Legendary.txt  7.2 Little Wolf.txt  7.3 We'll Be Fine.txt  7.4 Love In Paradise.txt  7.5 God Games.txt  8.1 Not Sorry for Loving You.txt  8.2 Dangerous.txt  8.3 Charybdis.txt  8.4 Get in the Water.txt  8.5 Six Hundred Strike.txt  9.1 The Challenge.txt  9.2 Hold Them Down.txt  9.3 Odysseus.txt  9.4 I Can't Help but Wonder.txt  9.5 Would You Fall in Love with Me.txt
GO-lang/: sudoku.csv
black-jack-rogue-like/: icon.svg.import  project.godot
c_testing/: hello  todo.c
cpp_todo/: CMakeLists.txt
league-movement/: project.godot
opengl/hello_test/: .clang-format  CMakeLists.txt
opengl/hello_test/.cache/clangd/index/: glad.c.5DAE67BA6B736ACF.idx  glad.h.A478C6F60D923412.idx  khrplatform.h.2B0E77E8F14BF040.idx  main.cpp.010085C7ABF8BC88.idx
opengl/hello_test/resources/shaders/: default.frag  default.vert  shaderClass.h
opengl/hello_test/rsc/shaders/: shaderClass.h
opengl/hello_test/src/: .main.cpp.kate-swp  main.cpp  shaderClass.cpp
opengl/tutorial/: CMakeLists.txt
opengl/tutorial/.cache/clangd/index/: EBO.cpp.625D1A6F2CDB17D8.idx  EBO.h.9C0A825E31475EDF.idx  Shader.cpp.5A382D25EC4D804E.idx  Shader.h.5CCEDCEA95B4DD03.idx  VAO.cpp.18B402AC13CD3CB2.idx  VAO.h.1854C3183189CB2B.idx  VBO.cpp.ADAECFFCC54D1342.idx  VBO.h.9275A1C5039CF9D8.idx  glad.c.8438E5372F98517C.idx  glad.h.85402E6874A37CF7.idx  khrplatform.h.7EED85764AC8D27E.idx  main.cpp.EE8CC346EE8F004B.idx  shaderClass.cpp.0D4E182D96C1E158.idx  shaderClass.h.5C6E865FB04B7065.idx
opengl/tutorial/src/: main.cpp
opengl/tutorial/src/gl/: EBO.cpp  EBO.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
raylib/test_game/: CMakeLists.txt
raylib/test_game/source/: main.cpp
re-pete/: icon.svg.import  project.godot
sudoku-rogue-like/: icon.svg.import  project.godot
trading-card-rpg/: icon.svg.import  project.godot
zig_testing/: build.zig  build.zig.zon
(+176 files in other folders)
